--- a/projects.html
+++ b/projects.html
@@ -33,7 +33,7 @@
       <div class="project-card">
         <h3>Portfolio Website</h3>
         <p>Personal responsive website built using HTML & CSS</p>
-        <a href="https://github.com/sakshi-kapase/portfolio" target="_blank">GitHub</a>
+        <a href="https://sakshi-kapase/Portfolio-website/" target="_blank">GitHub</a>
       </div>
   
       <div class="project-card">
